feat(channels): overhaul Web Channel Adapter with full-featured UI
- Expand web.rs with session management, model switching, and tool
  approval WebSocket endpoints
- Add rich single-page app.js with markdown rendering, code highlighting,
  file tree, and real-time streaming
- Redesign index.html and style.css with dark theme and responsive layout
- Add channel tests scaffolding
- Update web crate (Trunk.toml, WASM client) for standalone builds
- Add SessionLoader trait and WebModelEntry/WebSessionEntry types

--- a/crates/web/index.html
+++ b/crates/web/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>openpista</title>
-    <link rel="stylesheet" href="/style.css?v=20260227c" />
+    <link data-trunk rel="css" href="style.css" />
+    <link data-trunk rel="rust" data-wasm-opt="z" />
   </head>
   <body>
     <main id="app-shell" class="app-shell sidebar-open" aria-label="openpista web chat">
@@ -112,7 +113,7 @@
     <div id="toast-container" class="toast-container" aria-live="polite" aria-atomic="false"></div>
 
     <!-- Provider Auth Modal -->
-    <div id="providerAuthModal" class="modal-overlay hidden">
+    <div id="providerAuthModal" class="modal-overlay" style="display:none">
       <div class="modal-content provider-auth-modal">
         <div class="modal-header">
           <h2>🔑 Provider Authentication</h2>
@@ -126,6 +127,7 @@
       </div>
     </div>
 
-    <script src="/app.js?v=20260228a"></script>
+    <link data-trunk rel="copy-file" href="app.js" />
+    <script src="/app.js"></script>
   </body>
 </html>
